--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         >
           <span class="button-82-shadow"></span>
           <span class="button-82-edge"></span>
-          <span class="button-82-front text"> Send Message </span>
+          <span class="button-82-front text"> change </span>
         </a>
       </div>
       <div class="container2">
